feat: Nordigen/Account documentation
